Landing page modifications 2

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 								<input class="form-control input-custom" type="text" placeholder="Enter Your Twitter Handle" id="twitterhandle">
 								<div class="row">
 									<div class="col-xs-12 col-sm-6 col-sm-offset-3">
-										<button type="button" class="btn btn-success">Dum Dum Dum!</button>
+										<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-send"></span> &nbsp;Should I fire him today?</button>
 									</div>	
 								</div>
 							</div>	
