--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1 user-scalable=none">
-		<title>Firee! </title>
+		<title>Firee | Time's Up!</title>
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/main.css">
 		<script src="js/jquery.js"></script>
