--- a/results.html
+++ b/results.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1 user-scalable=none">
-		<title>Results</title>
+		<title>Results | Firee</title>
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/results.css">
 		<script src="js/jquery.js"></script>
@@ -15,6 +15,16 @@
 			<div class="row image">
 				<div class="col-xs-8 col-xs-offset-2 col-md-6 col-md-offset-3">
 					<img class="img-responsive" src="images/logo.png">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6 box">
+					<img src="images/yes.png">
+					<h2>Yes! You can fire him today.</h2>
+					<img src="images/no.png">
+					<h2>No! The person is already having a bad day.</h2>
+				</div>
+				<div class="col-md-6 box">
 				</div>
 			</div>
 		</div>	
